--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 
 ### Linux ###
 *~
+.env
+.aws-sam
+env.json
 
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
