--- a/template.yaml
+++ b/template.yaml
@@ -7,8 +7,8 @@ Description: >
 
 Globals:
   Function:
-    Timeout: 3
-    MemorySize: 128
+    Timeout: 60
+    MemorySize: 512
     Tracing: Active
     LoggingConfig:
       LogFormat: JSON
@@ -29,6 +29,12 @@ Resources:
           Properties:
             Path: /moderate
             Method: post
+      Environment:
+        Variables:
+          OPENAI_API_KEY: '{{resolve:ssm:/prod/openai/api-key:1}}'
+          DEFAULT_OPEN_AI_MODEL: '{{resolve:ssm:/prod/openai/model:1}}'
+          DEFAULT_TEMPERATURE: '{{resolve:ssm:/prod/openai/temperature:1}}'
+          DEFAULT_MAX_TOKENS: '{{resolve:ssm:/prod/openai/max-tokens:1}}'
 
   ApplicationResourceGroup:
     Type: AWS::ResourceGroups::Group
